--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+
+
 </body>
 </html>
+
+
